--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:lamudi1234@localhost:3306/issue-tracker"
+DATABASE_URL="mysql://root:your_password@localhost:3306/issue-tracker"
 NEXTAUTH_URL=http://localhost:3000
 # openssl rand -base64 32
 NEXTAUTH_SECRET=""
